# carmoreno.github.io

./: .gitattributes  .gitignore  2025-05-11-Data-storytelling-datos-hotel-ploty-python-test.ipynb  404.md  CNAME  README.md  _config.yml  index.html  notebooks_to_posts.sh  posts-by-categories.html  posts.html  pyproject.toml  search.html
_data/: thumbnail.yml
_includes/: footer.html  graph.html  head.html  header.html
_layouts/: about.html  dashboard.html  default.html  none.html  page.html  page404.html  post.html
_notebooks/: 2022-11-05-plotly-example.ipynb  2025-05-11-Data-storytelling-datos-hotel-ploty-python.ipynb  2025-05-25-pruebas-saber-11-icfes-colombia-en-numeros.ipynb  README.md  plotting.py
_posts/: 2015-08-12-Hola-Mundo.md  2015-08-13-Como-hice-el-blog.md  2015-08-15-Como-configurar-archivos-estaticos-django1.8.md  2015-08-17-Como-Configurar-django1.8.md  2015-08-20-App-Django1.8-Parte1.md  2015-08-24-App-Django1.8-Parte2.md  2015-09-05-Critica-de-Cuando-Marnie-Estuvo-Alli.md  2015-09-06-App-Django1.8-Parte3.md  2015-09-12-App-Django.18-Parte4.md  2015-09-20-Cual-es-el-mejor-lenguaje-de-programacion.md  2015-12-04-AtributeError-Cx-Freeze-Fix-Up-Module.md  2015-12-21-App-Django1.8-Parte5.md  2016-01-01-Patron-Factory.md  2016-01-06-Patron-Factory.md  2016-01-15-Critica-El-cuento-de-la-princesa-Kaguya.md  2016-01-31-App-Django1.8-Parte6.md  2016-02-12-App-Django1.8-Parte7.md  2016-02-18-Critica-de-Luna-de-Pluton-by-Dross.md  2016-04-10-TortoiseGit-Instalacion-y-uso.md  2016-04-30-Como-dar-estilos-a-interfaces-graficas-usando-python-y-qt.md  (+18 more)
(+38 files in other folders)
